tests/error/iter_errors/iter_wrong_type.err
Error: Not iterable (at $FILE:20:13)
   | 
18 | @guppy(module)
19 | def test(x: MyType) -> None:
20 |     for _ in x:
   |              ^ Expression of type `MyType` is not iterable

Help: Fix signature of method `MyType.__iter__`:  Expected `MyType -> ?Iter`,
got `(MyType, int) -> MyType`

Guppy compilation failed due to 1 previous error
